# rgbd_ddpg_navigation

./: CMakeLists.txt  README.md  package.xml
config/: ddpg.rviz
launch/: ddpg_navigation.launch
scripts/: ddpg.py  observe_publisher.py  observe_saver.py  observe_viewer.py  pub_drive.py  pub_goal.py  pub_straight.py  pub_zero.py
scripts/gym_pathplan/envs/: observe_data.csv  simple.py
scripts/gym_pathplan/envs/function/: raycast.py
scripts/weights/trained_weight/: ddpg_Simple-v0.csv  ddpg_Simple-v0_weights_actor.h5f.data-00000-of-00002  ddpg_Simple-v0_weights_actor.h5f.data-00001-of-00002  ddpg_Simple-v0_weights_actor.h5f.index  ddpg_Simple-v0_weights_critic.h5f.data-00000-of-00002  ddpg_Simple-v0_weights_critic.h5f.data-00001-of-00002  ddpg_Simple-v0_weights_critic.h5f.index
